clusters/cosmos/apps/torrents/deluge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: deluge-ingress
spec:
 tls:
 - hosts:
   - deluge.cosmos.cboxlab.com
   secretName: deluge-tls-secret
 rules:
 - host: deluge.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: deluge-openvpn
           port:
             number: 8112
       path: /
       pathType: Prefix
