clusters/cosmos/apps/torrents/prowlarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: prowlarr-ingress
spec:
 tls:
 - hosts:
   - prowlarr.cosmos.cboxlab.com
   secretName: prowlarr-tls-secret
 rules:
 - host: prowlarr.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: prowlarr
           port:
             number: 9696
       path: /
       pathType: Prefix
