clusters/cosmos/apps/torrents/radarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: radarr-ingress
spec:
 tls:
 - hosts:
   - radarr.cosmos.cboxlab.com
   secretName: radarr-tls-secret
 rules:
 - host: radarr.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: radarr
           port:
             number: 7878
       path: /
       pathType: Prefix
