clusters/cosmos/apps/torrents/whisparr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: whisparr-ingress
spec:
 tls:
 - hosts:
   - whisparr.cosmos.cboxlab.com
   secretName: whisparr-tls-secret
 rules:
 - host: whisparr.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: whisparr
           port:
             number: 6969
       path: /
       pathType: Prefix
